add admob features

--- a/framekworks/runtime-src/proj.android/res/values/ids.xml
+++ b/framekworks/runtime-src/proj.android/res/values/ids.xml
@@ -28,4 +28,6 @@
   
   <string name="leaderboard_hard">CgkIyqPyiYsDEAIQCg</string>
   <string name="leaderboard_easy">CgkIyqPyiYsDEAIQCw</string>
+  
+  <string name="admob_interstitial">ca-app-pub-2550536070025080/1660836858</string>
 </resources>
