--- a/framekworks/runtime-src/proj.android/res/values/ids.xml
+++ b/framekworks/runtime-src/proj.android/res/values/ids.xml
@@ -29,5 +29,9 @@
   <string name="leaderboard_hard">CgkIyqPyiYsDEAIQCg</string>
   <string name="leaderboard_easy">CgkIyqPyiYsDEAIQCw</string>
   
+  <string name="event_quest_test">CgkIyqPyiYsDEAIQDA</string>
+  <string name="quest_test_quest">CgkIyqPyiYsDEAIQDQ</string>
+  
   <string name="admob_interstitial">ca-app-pub-2550536070025080/1660836858</string>
+  <string name="admob_banner"></string>
 </resources>
